<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:title="@string/movie"
        android:icon="@drawable/ic_movie"/>

    <item
        android:id="@+id/navigation_tv"
        android:icon="@drawable/ic_tv"
        android:title="@string/tv_shows" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/selector_fav"
        android:title="@string/title_fav" />

</menu>